--- a/servidorCEP/package.json
+++ b/servidorCEP/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "routes": "^2.1.0"
   },
   "name": "servidorcep",
@@ -18,9 +19,9 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "testMatch": [
-    "<rootDir>/test/**/*.test.ts"
+      "<rootDir>/test/**/*.test.ts"
     ]
-    },    
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -29,7 +30,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
